[package]
name = "ld54"
version = "0.1.0"
edition = "2021"

[features]
inspector = ["bevy-inspector-egui", "bevy_panorbit_camera/bevy_egui"]
webgl2 = ["bevy/webgl2"]
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
] }
bevy-inspector-egui = { version = "0.19.0", optional = true }
# bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", default-features = false }
bevy_ecs_tilemap = "0.11"
bevy_mod_picking = { version = "0.15.0", default-features = false, features = [
    "backend_raycast",
    "debug",
    # "selection",
    "highlight",
] }
bevy_panorbit_camera = { version = "0.8.0" }
rand = "0.8"
strum_macros = "0.25.2"
